Fix horizontal scrollbar in search div

--- a/assets/css/search.scss
+++ b/assets/css/search.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     width: 100%;
     background-color: #f7f7f7;
-    border: 1px solid #ccc;
+    border-top: 1px solid #ccc;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     font-size: 16px;
 
@@ -20,6 +20,7 @@
         height: 300px;
         overflow-y: auto;
         padding: 0.5em;
+
         .result {
             width: 100%;
             // align-self: flex-end;
